--- a/scss/_toc.scss
+++ b/scss/_toc.scss
@@ -1,10 +1,7 @@
 [role=navigation] {
-  position: relative;
-  overflow-y: auto;
   background-color: white;
   border-right: 1px solid $color-trans-black;
   min-height: 100%;
-  z-index: 200;
 }
 
 dl.side-nav {
